fix tokens libraries docs page

--- a/content/docs/tokens/libraries.mdx
+++ b/content/docs/tokens/libraries.mdx
@@ -8,7 +8,7 @@ description: Use @founfation-ui/tokens default libraries in your project.
 #### Color
 
 <DocsTextBlock className="m-b-medium-60">
-  Import all parts and piece them together.
+  Color design tokens used by default in `foundation-ui`.
 </DocsTextBlock>
 
 <DocsCodePreview
@@ -1195,7 +1195,7 @@ description: Use @founfation-ui/tokens default libraries in your project.
 #### Measurement
 
 <DocsTextBlock className="m-b-medium-60">
-  Import all parts and piece them together.
+  Measurement design tokens used by default in `foundation-ui`.
 </DocsTextBlock>
 
 <DocsCodePreview
@@ -1351,7 +1351,7 @@ description: Use @founfation-ui/tokens default libraries in your project.
 #### Font Size
 
 <DocsTextBlock className="m-b-medium-60">
-  Import all parts and piece them together.
+  Font size design tokens used by default in `foundation-ui`.
 </DocsTextBlock>
 
 <DocsCodePreview
@@ -1527,7 +1527,7 @@ description: Use @founfation-ui/tokens default libraries in your project.
 #### Depth
 
 <DocsTextBlock className="m-b-medium-60">
-  Import all parts and piece them together.
+  Z-Index design tokens used by default in `foundation-ui`.
 </DocsTextBlock>
 
 <DocsCodePreview
@@ -1660,7 +1660,7 @@ description: Use @founfation-ui/tokens default libraries in your project.
 #### Opacity
 
 <DocsTextBlock className="m-b-medium-60">
-  Import all parts and piece them together.
+  Opacity design tokens used by default in `foundation-ui`.
 </DocsTextBlock>
 
 <DocsCodePreview
