Add core tokens generators docs pages

--- a/content/docs/core/generate-css-vars.mdx
+++ b/content/docs/core/generate-css-vars.mdx
@@ -3,7 +3,4 @@ title: Generate CSS Variables
 description: Use @founfation-ui/core to generate custom CSS variables based on your design token library.
 ---
 
-<DocsFooter
-  prev="/docs/core/generate-tokens"
-  next="/docs/core/generate-css-classes"
-/>
+<DocsFooter prev="/docs/core/" next="/docs/core/" />
