--- a/content/docs/core/installation.mdx
+++ b/content/docs/core/installation.mdx
@@ -22,4 +22,4 @@ description: Install and setup @founfation-ui/core in your project.
 <DocsCodePreview language="shell" code={`pnpm add @foundation-ui/core`} />
 </DocsSection>
 
-<DocsFooter prev="/docs/color-mode/usage" next="/docs/core/generate-tokens" />
+<DocsFooter prev="/docs/color-mode/usage" next="/docs/core/usage" />
