--- a/content/docs/uba/installation.mdx
+++ b/content/docs/uba/installation.mdx
@@ -15,6 +15,6 @@ description: Install and setup @founfation-ui/analytics in your project.
 </DocsSection>
 
 <DocsFooter
-  prev="/docs/icons/installation"
+  prev="/docs/core/installation"
   next="/docs/uba/use-behavior-analytics"
 />
