--- a/content/docs/components-hooks/api-reference.mdx
+++ b/content/docs/components-hooks/api-reference.mdx
@@ -17,13 +17,14 @@ description: How Component Hooks are build and how do they work.
   API](https://react.dev/reference/react/useContext) used to share internal
   states.
 </DocsTextBlock>
+</DocsSection>
 
-<DocsTextBlock className="m-b-medium-60">
-
-###### When the Compound pattern is used, you can import the Component Hook to access its internal functions and adjust the component behavior to handle complex interactions and or mutations.
-
-</DocsTextBlock>
-
+<DocsSection>
+  <DocsBanner
+    title="Compound pattern and Component Hook"
+    description="When the Compound pattern is used, you can import the Component Hook to access its internal functions and adjust the component behavior to handle complex interactions and or mutations."
+    mode="meta"
+  />
 </DocsSection>
 
 <DocsSection className="m-y-large-10">
