--- a/content/docs/tokens/installation.mdx
+++ b/content/docs/tokens/installation.mdx
@@ -4,6 +4,14 @@ description: Install and setup @founfation-ui/tokens in your project.
 ---
 
 <DocsSection>
+  <DocsBanner
+    title="@foundation-ui is deployed as a private package"
+    description="If you want to install @foundation-ui packages, you can either fork the repository or join the community to get an installation token during the Beta program."
+    mode="warning"
+  />
+</DocsSection>
+
+<DocsSection>
 #### Install @founfation-ui/tokens
 
 <DocsTextBlock>
