--- a/content/docs/getting-started.mdx
+++ b/content/docs/getting-started.mdx
@@ -4,42 +4,56 @@ description: How to install dependencies and structure your app.
 ---
 
 <DocsSection>
+  <DocsBanner
+    title="@foundation-ui is deployed as a private package"
+    description="If you want to install @foundation-ui packages, you can either fork the repository or join the community to get an installation token during the Beta program."
+    mode="warning"
+  />
+</DocsSection>
+
+<DocsSection>
 ### Install
 
-<DocsTextBlock>
+<DocsTextBlock className="m-b-medium-60">
   To get the most out of `@foundation-ui`, it is strongly recommended to use at
   least `@foundation-ui/components` and `@foundation-ui/tokens`.
 </DocsTextBlock>
-<br />
-<DocsTextBlock>
+
+<DocsTextBlock className="m-b-medium-60">
   Run the following commands to install `@foundation-ui` packages in project:
 </DocsTextBlock>
 
+<DocsCodePreview
+  language="shell"
+  code={`pnpm add @foundation-ui/components @foundation-ui/tokens @foundation-ui/core @foundation-ui/styles @foundation-ui/analytics @foundation-ui/hooks`}
+/>
+</DocsSection>
+
+<DocsSection>
+### Fork the repository
+
+<DocsTextBlock>
+  You can fork the repository by clicking the fork button in the top right
+  corner of [this page](https://github.com/foundation-ui/design-system).
+</DocsTextBlock>
+
+<DocsTextBlock className="m-b-medium-60">
+  Run the following commands to fork `@foundation-ui`:
+</DocsTextBlock>
+
+<DocsCodePreview
+  language="shell"
+  code={`git clone https://github.com/foundation-ui/design-system.git`}
+/>
+
 <br />
+#### Install dependencies
+<DocsCodePreview language="shell" code={`pnpm -r install`} />
 
-#### Components
+<br />
+#### Run Storybook
+<DocsCodePreview language="shell" code={`pnpm run storybook`} />
 
-<DocsCodePreview language="shell" code={`pnpm add @foundation-ui/components`} />
-
-#### Tokens
-
-<DocsCodePreview language="shell" code={`pnpm add @foundation-ui/tokens`} />
-
-#### Styles
-
-<DocsCodePreview language="shell" code={`pnpm add @foundation-ui/styles`} />
-
-#### Core
-
-<DocsCodePreview language="shell" code={`pnpm add @foundation-ui/core`} />
-
-#### Analytics
-
-<DocsCodePreview language="shell" code={`pnpm add @foundation-ui/analytics`} />
-
-#### Hooks
-
-  <DocsCodePreview language="shell" code={`pnpm add @foundation-ui/hooks`} />
 </DocsSection>
 
 <DocsSection>
