--- a/content/docs/introduction.mdx
+++ b/content/docs/introduction.mdx
@@ -1,13 +1,55 @@
 ---
 title: Introduction
-description: Foundation UI offers a suite of powerful Engines and Libraries optimized to create cohesive UIs using accessible, robust, and intuitive components alongside User Behavior Analytics.
+description: foundation-ui offers a suite of powerful Engines and Libraries optimized to create cohesive UIs using accessible, robust, and intuitive components alongside User Behavior Analytics.
 ---
 
-Foundation UI is designed to work as a standalone library or integrate to an
-existing toolset and craft production-grade applications.
+<DocsSection>
+  <DocsTextBlock className="m-b-medium-60">
+    `@foundation-ui` provides a complete platform for building beautiful,
+    consistent, and data-driven user interfaces that can be deployed to any
+    target.
+  </DocsTextBlock>
+  <DocsTextBlock className="m-b-medium-60">
+    This is an integrated ecosystem designed to streamline the entire product
+    development workflow, from design tokens to production applications.
+  </DocsTextBlock>
+</DocsSection>
 
 <DocsSection>
-  ### Components
+  ### Philosophy
+
+<DocsTextBlock className="m-b-medium-60">
+  `@foundation-ui` is built on three core principles:
+</DocsTextBlock>
+
+<DocsTextBlock className="m-b-medium-60">
+  **_Headless Architecture_**: Use built-in analytics to understand how users
+  actually interact with your components, enabling you to make smarter,
+  evidence-based design decisions.
+</DocsTextBlock>
+<DocsTextBlock className="m-b-medium-60">
+  **_Data-Driven Development_**: Use built-in analytics to understand how users
+  actually interact with your components, enabling you to make smarter,
+  evidence-based design decisions.
+</DocsTextBlock>
+<DocsTextBlock className="m-b-medium-60">
+  **_Seamless Developer Experience_**: With a powerful token engine, a focus on
+  accessibility and flexibility, `@foundation-ui` is designed to help you build
+  better, faster.
+</DocsTextBlock>
+
+</DocsSection>
+
+<DocsSection>
+  ### Packages
+  <DocsTextBlock>
+    `@foundation-ui` is a modular system where each package has a distinct role.
+    Understanding how they connect is key to using the platform effectively.
+  </DocsTextBlock>
+</DocsSection>
+
+<DocsSection>
+  #### Components
   <DocsTextBlock>
     `@foundation-ui/components` provides low-level components such as Buttons,
     Accordions, .. with a focus on accessibility, customization and developer
@@ -17,7 +59,7 @@ existing toolset and craft production-grade applications.
 </DocsSection>
 
 <DocsSection>
-  ### Tokens
+  #### Tokens
   <DocsTextBlock>
     `@foundation-ui/tokens` is an assets library with built-int Design Tokens.
     Use it with `@foundation-ui/core` to generate your custom Design Tokens
@@ -26,7 +68,7 @@ existing toolset and craft production-grade applications.
 </DocsSection>
 
 <DocsSection>
-  ### Styles
+  #### Styles
   <DocsTextBlock>
     `@foundation-ui/styles` provides reset styles, common styles definition and
     CSS variables generated using `@foundation-ui/core` or from a built-in
@@ -35,7 +77,7 @@ existing toolset and craft production-grade applications.
 </DocsSection>
 
 <DocsSection>
-  ### Core
+  #### Core
   <DocsTextBlock>
     `@foundation-ui/core` is a Design Tokens Engine built to generate JSON based
     libraries that can be used in any kind of app. Use it coupled with
@@ -45,7 +87,7 @@ existing toolset and craft production-grade applications.
 </DocsSection>
 
 <DocsSection>
-  ### Analytics
+  #### Analytics
   <DocsTextBlock>
     `@foundation-ui/analytics` provides live User analytics and system
     informations to gain insights into user behavior and improve user
