--- a/content/docs/uba/installation.mdx
+++ b/content/docs/uba/installation.mdx
@@ -4,6 +4,14 @@ description: Install and setup @founfation-ui/analytics in your project.
 ---
 
 <DocsSection>
+  <DocsBanner
+    title="@foundation-ui is deployed as a private package"
+    description="If you want to install @foundation-ui packages, you can either fork the repository or join the community to get an installation token during the Beta program."
+    mode="warning"
+  />
+</DocsSection>
+
+<DocsSection>
 #### Install @founfation-ui/analytics
 
 <DocsTextBlock>
@@ -12,6 +20,14 @@ description: Install and setup @founfation-ui/analytics in your project.
 </DocsTextBlock>
 
 <DocsCodePreview language="shell" code={`pnpm add @foundation-ui/analytics`} />
+</DocsSection>
+
+<DocsSection>
+  <DocsBanner
+    title="@foundation-ui/analytics can break SSR builds"
+    description="@foundation-ui/analytics function are still under development and can cause error during builds. This is due to the using of the Window API."
+    mode="error"
+  />
 </DocsSection>
 
 <DocsFooter
