Add OTPField docs

--- a/content/docs/components/field.mdx
+++ b/content/docs/components/field.mdx
@@ -211,4 +211,7 @@ export function FieldComponent() {
 />
 </DocsSection>
 
-<DocsFooter prev="/docs/components/dropdown" next="/docs/components/overlay" />
+<DocsFooter
+  prev="/docs/components/dropdown"
+  next="/docs/components/otp-field"
+/>
