--- a/content/docs/components/overlay.mdx
+++ b/content/docs/components/overlay.mdx
@@ -88,4 +88,4 @@ export function OverlayComponent() {
 
 </DocsSection>
 
-<DocsFooter prev="/docs/components/field" next="/docs/components/page" />
+<DocsFooter prev="/docs/components/otp-field" next="/docs/components/page" />
