Update Docs content: buildtime-> runtime, remove env values from mocked values

--- a/content/docs/core/installation.mdx
+++ b/content/docs/core/installation.mdx
@@ -7,8 +7,8 @@ description: Install and setup @founfation-ui/core in your project.
 #### Install @founfation-ui/core
 
 <DocsTextBlock>
-  `@usefui/core` can be used to dynamically generate design tokens on build-time
-  or every time your library needs an update. use it with `@usefui/components`.
+  `@usefui/core` can be used to dynamically generate design tokens on runtime or
+  every time your library needs an update. use it with `@usefui/components`.
 </DocsTextBlock>
 
 <br />
