--- a/content/docs/core/usage.mdx
+++ b/content/docs/core/usage.mdx
@@ -7,9 +7,9 @@ description: Install and setup @founfation-ui/core in your project.
 #### Build-time generation
 
 <DocsTextBlock className="m-b-medium-60">
-  To dynamically generate design tokens on build-time with `@usefui/core`, you
-  need to create a `ClientProvider` to handle your custom variables and
-  distribute them as CSS variables.
+  To dynamically generate design tokens on runtime with `@usefui/core`, you need
+  to create a `ClientProvider` to handle your custom variables and distribute
+  them as CSS variables.
 </DocsTextBlock>
 
 <DocsCodePreview
