--- a/content/docs/uba/use-behavior-analytics.mdx
+++ b/content/docs/uba/use-behavior-analytics.mdx
@@ -133,9 +133,9 @@ export function HookComponent() {
         }
     ],
     "system": {
-        "path": "http://localhost:3000/app",
-        "user_agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36",
-        "device_os": "macOS 10_15_7",
+        "path": "...",
+        "user_agent": "...",
+        "device_os": "...",
         "viewport": {
             "width": 1039,
             "height": 937
@@ -155,7 +155,6 @@ export function HookComponent() {
         }
     }
 }
-
 `}
 />
 
