Add breadcrumb docs

--- a/content/docs/components/badge.mdx
+++ b/content/docs/components/badge.mdx
@@ -112,4 +112,4 @@ export function BadgeComponent() {
 />
 </DocsSection>
 
-<DocsFooter prev="/docs/components/avatar" next="/docs/components/button" />
+<DocsFooter prev="/docs/components/avatar" next="/docs/components/breadcrumb" />
