--- a/content/docs/components/button.mdx
+++ b/content/docs/components/button.mdx
@@ -122,4 +122,7 @@ export function ButtonComponent() {
 />
 </DocsSection>
 
-<DocsFooter prev="/docs/components/badge" next="/docs/components/checkbox" />
+<DocsFooter
+  prev="/docs/components/breadcrumb"
+  next="/docs/components/checkbox"
+/>
