Update button docs, add shape to api-ref docs

--- a/content/docs/components/api-reference.mdx
+++ b/content/docs/components/api-reference.mdx
@@ -49,9 +49,14 @@ description: How component are built and common properties.
       description: 'Control the size of the component',
     },
     {
+      name: "shape",
+      type: "round | smooth | suare",
+      description: 'Control the shape of the component',
+    },
+    {
       name: "variant",
-      type: "primary | secondary | tertiary | border | mono | ghost",
-      description: 'Control the size of the component',
+      type: "primary | secondary | tertiary | mono | border | ghost | danger | warning",
+      description: 'Control the variant of the component',
     },
   ]}
 />
