--- a/content/docs/components/button.mdx
+++ b/content/docs/components/button.mdx
@@ -11,35 +11,51 @@ import { Button } from "@usefui/components";
 function ButtonTemplate() {
 
     return (
-        <div className="grid g-medium-30 p-t-large-30 p-x-medium-60">
-            <div className="flex align-center g-medium-10 justify-center">
-                {["primary", "secondary", "tertiary", "mono", "border", "ghost"].map(
-                (variant, key) => (
-                    <Button
-                        key={key}
-                        variant={
-                            variant as
-                            | "primary"
-                            | "secondary"
-                            | "tertiary"
-                            | "mono"
-                            | "border"
-                            | "ghost"
-                        }
-                    >
-                    @fui
-                    </Button>
-                ),
-                )}
-            </div>
-            <div className="flex align-center g-medium-10 justify-center">
-                {["small", "medium", "large"].map((size, key) => (
-                    <Button key={key} sizing={size as "small" | "medium" | "large"}>
-                        @fui
-                    </Button>
-                ))}
-            </div>
+      <div className="grid g-medium-30 p-t-large-30 p-x-medium-60">
+        <div className="flex flex-wrap align-center g-medium-10 justify-center">
+          {[
+            "primary",
+            "danger",
+            "warning",
+            "secondary",
+            "tertiary",
+            "mono",
+            "border",
+            "ghost",
+          ].map((variant, key) => (
+            <Button key={key} variant={variant as "primary"}>
+              @usefui
+            </Button>
+          ))}
         </div>
+        <div className="flex align-center g-medium-10 justify-center">
+          {["round", "smooth", "square"].map((shape, key) => (
+            <Button key={key} sizing="medium" shape={shape as "smooth"}>
+              @usefui
+            </Button>
+          ))}
+        </div>
+        <div className="flex align-center g-medium-10 justify-center">
+          {["small", "medium", "large"].map((size, key) => (
+            <Button key={key} sizing={size as "small" | "medium" | "large"}>
+              @usefui
+            </Button>
+          ))}
+        </div>
+        <div className="flex flex-wrap align-center g-medium-10 justify-center">
+          {["primary", "secondary", "tertiary", "mono", "border"].map(
+            (variant, key) => (
+              <Button
+                key={key}
+                animation="reflective"
+                variant={variant as "primary"}
+              >
+                @usefui
+              </Button>
+            ),
+          )}
+        </div>
+      </div>
     );
 
 }
@@ -93,6 +109,17 @@ export function ButtonComponent() {
       name: "sizing",
       type: '"small" | "medium" | "large"',
       defaultValue: "medium",
+      required: false,
+    },
+    {
+      name: "shape",
+      type: '"round" | "smooth" | "square"',
+      defaultValue: "smooth",
+      required: false,
+    },
+    {
+      name: "animation",
+      type: "reflective",
       required: false,
     },
     {
