--- a/content/docs/components/button.mdx
+++ b/content/docs/components/button.mdx
@@ -149,7 +149,4 @@ export function ButtonComponent() {
 />
 </DocsSection>
 
-<DocsFooter
-  prev="/docs/components/breadcrumb"
-  next="/docs/components/checkbox"
-/>
+<DocsFooter prev="/docs/components/breadcrumb" next="/docs/components/card" />
