--- a/content/docs/components/checkbox.mdx
+++ b/content/docs/components/checkbox.mdx
@@ -185,7 +185,4 @@ export function CheckboxComponent() {
 
 </DocsSection>
 
-<DocsFooter
-  prev="/docs/components/button"
-  next="/docs/components/collapsible"
-/>
+<DocsFooter prev="/docs/components/card" next="/docs/components/collapsible" />
