Add copy-button docs

--- a/content/docs/components/collapsible.mdx
+++ b/content/docs/components/collapsible.mdx
@@ -188,4 +188,7 @@ export function CollapsibleComponent() {
 
 </DocsSection>
 
-<DocsFooter prev="/docs/components/checkbox" next="/docs/components/dialog" />
+<DocsFooter
+  prev="/docs/components/checkbox"
+  next="/docs/components/copy-button"
+/>
