Add Resizable, PrivacyField docs

--- a/content/docs/components/portal.mdx
+++ b/content/docs/components/portal.mdx
@@ -91,4 +91,7 @@ export function PortalComponent() {
 />
 </DocsSection>
 
-<DocsFooter prev="/docs/components/page" next="/docs/components/sheet" />
+<DocsFooter
+  prev="/docs/components/page"
+  next="/docs/components/privacy-field"
+/>
