--- a/content/docs/components/sheet.mdx
+++ b/content/docs/components/sheet.mdx
@@ -224,4 +224,7 @@ export function SheetComponent() {
 />
 </DocsSection>
 
-<DocsFooter prev="/docs/components/portal" next="/docs/components/scrollarea" />
+<DocsFooter
+  prev="/docs/components/resizable"
+  next="/docs/components/scrollarea"
+/>
