Add Skeleton and SPinner docs

--- a/content/docs/components/scrollarea.mdx
+++ b/content/docs/components/scrollarea.mdx
@@ -65,4 +65,4 @@ export function ScrollAreaComponent() {
 />
 </DocsSection>
 
-<DocsFooter prev="/docs/components/sheet" next="/docs/components/switch" />
+<DocsFooter prev="/docs/components/sheet" next="/docs/components/skeleton" />
