Add textarea docs, fix fields variants docs

--- a/content/docs/components/field.mdx
+++ b/content/docs/components/field.mdx
@@ -102,7 +102,7 @@ export function FieldComponent() {
   properties={[
     {
       name: "variant",
-      type: '"primary" | "secondary" | "tertiary" | "mono" | "border" | "ghost"',
+      type: '"primary" | "secondary" | "ghost"',
       defaultValue: "primary",
       required: false,
     },
