--- a/content/docs/components/toggle.mdx
+++ b/content/docs/components/toggle.mdx
@@ -128,4 +128,4 @@ export function ToggleComponent() {
 />
 </DocsSection>
 
-<DocsFooter prev="/docs/components/tabs" next="/docs/components/toolbar" />
+<DocsFooter prev="/docs/components/textarea" next="/docs/components/toolbar" />
