--- a/content/docs/components/privacy-field.mdx
+++ b/content/docs/components/privacy-field.mdx
@@ -66,7 +66,7 @@ export function PrivacyFieldComponent() {
     },
     {
       name: "variant",
-      type: '"primary" | "secondary" | "tertiary" | "mono" | "border" | "ghost"',
+      type: '"primary" | "secondary" | "ghost"',
       defaultValue: "primary",
       required: false,
     },
