--- a/content/docs/components/tabs.mdx
+++ b/content/docs/components/tabs.mdx
@@ -184,4 +184,4 @@ export function TabsComponent() {
 />
 </DocsSection>
 
-<DocsFooter prev="/docs/components/table" next="/docs/components/toggle" />
+<DocsFooter prev="/docs/components/table" next="/docs/components/textarea" />
