--- a/content/docs/components/dropdown.mdx
+++ b/content/docs/components/dropdown.mdx
@@ -10,7 +10,7 @@ description: Dropdown are used to expand and collapse list of actions.
   component={<DropdownMenuTemplate />}
   code={`import React from "react";
 import { Divider, DropdownMenu } from "@usefui/components";
-import { Icon, PixelIcon } from "@usefui/icons";
+import { Icon } from "@usefui/icons";
 
 export function DropdownMenuComponent() {
     return (
@@ -28,7 +28,7 @@ export function DropdownMenuComponent() {
                         >
                         Radio Item
                         <Icon>
-                            <PixelIcon.ArrowRight />
+                            <Icon.ArrowRight />
                         </Icon>
                         </DropdownMenu.Item>
                         <Divider />
