--- a/content/docs/components/sheet.mdx
+++ b/content/docs/components/sheet.mdx
@@ -28,7 +28,7 @@ export function SheetComponent() {
 
                 <Sheet.Trigger variant="ghost">
                     <Icon>
-                    <PixelIcon.Close />
+                    <Icon.Remove />
                     </Icon>
                 </Sheet.Trigger>
                 </div>
