--- a/content/docs/components/toggle.mdx
+++ b/content/docs/components/toggle.mdx
@@ -27,7 +27,7 @@ const [checkedItem, setCheckedItem] = React.useState<string>("primary");
                     >
                         <Icon>
                         {variant === checkedItem ? (
-                            <PixelIcon.Check />
+                            <Icon.Check />
                         ) : (
                             <PixelIcon.Downasaur />
                         )}
