--- a/content/docs/components/toolbar.mdx
+++ b/content/docs/components/toolbar.mdx
@@ -32,7 +32,7 @@ export function ToolbarComponent() {
                     className="flex align-center w-100 g-medium-30"
                     >
                     <Icon>
-                        <PixelIcon.Link />
+                        <Icon.LinkExternal />
                     </Icon>
                     <p className="fs-medium-10 opacity-default-30">Link</p>
                     </Toolbar.Item>
