Add Icons docs, update usefui mispells

--- a/content/docs/color-mode/usage.mdx
+++ b/content/docs/color-mode/usage.mdx
@@ -1,6 +1,6 @@
 ---
 title: Color Mode
-description: Setup and use @founfation-ui/tokens's color mode hook in your project.
+description: Setup and use @usefui/tokens's color mode hook in your project.
 ---
 
 <DocsSection>
