--- a/content/docs/core/usage.mdx
+++ b/content/docs/core/usage.mdx
@@ -1,6 +1,6 @@
 ---
 title: Core usage
-description: Install and setup @founfation-ui/core in your project.
+description: Install and setup @usefui/core in your project.
 ---
 
 <DocsSection>
