--- a/content/docs/tokens/libraries.mdx
+++ b/content/docs/tokens/libraries.mdx
@@ -1,6 +1,6 @@
 ---
 title: Built-in libraries
-description: Use @founfation-ui/tokens default libraries in your project.
+description: Use @usefui/tokens default libraries in your project.
 ---
 
 <DocsSection>
