--- a/content/docs/uba/installation.mdx
+++ b/content/docs/uba/installation.mdx
@@ -1,10 +1,10 @@
 ---
 title: Analytics Installation
-description: Install and setup @founfation-ui/analytics in your project.
+description: Install and setup @usefui/analytics in your project.
 ---
 
 <DocsSection>
-#### Install @founfation-ui/analytics
+#### Install @usefui/analytics
 
 <DocsTextBlock>
   `@usefui/analytics` provides live user behavior analytics that you can use in
