--- a/content/docs/uba/use-behavior-analytics.mdx
+++ b/content/docs/uba/use-behavior-analytics.mdx
@@ -1,6 +1,6 @@
 ---
 title: useBehaviorAnalytics
-description: Use @founfation-ui/analytics's Hooks in your project.
+description: Use @usefui/analytics's Hooks in your project.
 ---
 
 <DocsCodePreview
