--- a/content/docs/color-mode/provider.mdx
+++ b/content/docs/color-mode/provider.mdx
@@ -1,6 +1,6 @@
 ---
 title: Color Mode Provider
-description: Setup and use @founfation-ui/tokens's color mode context in your project.
+description: Setup and use @usefui/tokens's color mode context in your project.
 ---
 
 <DocsCodePreview
