--- a/content/docs/components/installation.mdx
+++ b/content/docs/components/installation.mdx
@@ -1,10 +1,10 @@
 ---
 title: Components Installation
-description: Install and setup @founfation-ui/components in your project.
+description: Install and setup @usefui/components in your project.
 ---
 
 <DocsSection>
-#### Install @founfation-ui/components
+#### Install @usefui/components
 
 <DocsTextBlock>
   To get the most out of `@usefui/components`, it is strongly recommended to use
