--- a/content/docs/core/installation.mdx
+++ b/content/docs/core/installation.mdx
@@ -1,10 +1,10 @@
 ---
 title: Core installation
-description: Install and setup @founfation-ui/core in your project.
+description: Install and setup @usefui/core in your project.
 ---
 
 <DocsSection>
-#### Install @founfation-ui/core
+#### Install @usefui/core
 
 <DocsTextBlock>
   `@usefui/core` can be used to dynamically generate design tokens on runtime or
