--- a/content/docs/tokens/usage.mdx
+++ b/content/docs/tokens/usage.mdx
@@ -1,6 +1,6 @@
 ---
 title: Design Tokens
-description: Setup and use @founfation-ui/tokens's color mode hook in your project.
+description: Setup and use @usefui/tokens's color mode hook in your project.
 ---
 
 <DocsSection>
