Add links between usefui products

--- a/content/docs/icons-cli/examples.mdx
+++ b/content/docs/icons-cli/examples.mdx
@@ -87,4 +87,4 @@ Run the `generate` command with the `-s` and `-o` options:
 
 `} />
 
-<DocsFooter prev="/docs/cli/usage" next="/docs/cli/performances" />
+<DocsFooter prev="/docs/icons-cli/usage" next="/docs/icons-cli/performances" />
