--- a/content/docs/icons-cli/getting-started.mdx
+++ b/content/docs/icons-cli/getting-started.mdx
@@ -71,4 +71,4 @@ description:
 
 </DocsSection>
 
-<DocsFooter prev="/docs/cli/introduction" next="/docs/cli/usage" />
+<DocsFooter prev="/docs/icons-cli/introduction" next="/docs/icons-cli/usage" />
