--- a/content/docs/icons-cli/introduction.mdx
+++ b/content/docs/icons-cli/introduction.mdx
@@ -76,4 +76,7 @@ description: SVGJSX is an Open Source Command Line Interface to convert, optimiz
 
 </DocsSection>
 
-<DocsFooter prev="/docs/icons/installation" next="/docs/cli/getting-started" />
+<DocsFooter
+  prev="/docs/icons/installation"
+  next="/docs/icons-cli/getting-started"
+/>
