--- a/content/docs/icons-cli/performances.mdx
+++ b/content/docs/icons-cli/performances.mdx
@@ -148,4 +148,4 @@ done
 
 </DocsSection>
 
-<DocsFooter prev="/docs/cli/examples" next="/docs/tokens/installation" />
+<DocsFooter prev="/docs/icons-cli/examples" next="/docs/tokens/installation" />
