--- a/content/docs/icons-cli/usage.mdx
+++ b/content/docs/icons-cli/usage.mdx
@@ -46,4 +46,7 @@ description:
 
 `} />
 
-<DocsFooter prev="/docs/cli/getting-started" next="/docs/cli/examples" />
+<DocsFooter
+  prev="/docs/icons-cli/getting-started"
+  next="/docs/icons-cli/examples"
+/>
