--- a/content/docs/icons/libraries.mdx
+++ b/content/docs/icons/libraries.mdx
@@ -9,4 +9,4 @@ description: A collection of icons used across Foundation UI products.
 
 </DocsSection>
 
-<DocsFooter prev="/docs/tokens/usage" next="/docs/cli/introduction" />
+<DocsFooter prev="/docs/tokens/usage" next="/docs/icons-cli/introduction" />
