--- a/content/docs/tokens/installation.mdx
+++ b/content/docs/tokens/installation.mdx
@@ -69,4 +69,4 @@ description: Install and setup @usefui/tokens in your project.
 
 </DocsSection>
 
-<DocsFooter prev="/docs/cli/introduction" next="/docs/tokens/usage" />
+<DocsFooter prev="/docs/icons-cli/introduction" next="/docs/tokens/usage" />
